Fixed select option color on Firefox bug, it now shows up white.

--- a/default-darksepia.css
+++ b/default-darksepia.css
@@ -395,3 +395,11 @@ a.button:hover {
     color: #f2f2f2;
     background-color: rgb(47, 64, 78) !important;
 }
+
+#copyright {
+  color: rgb(177, 164, 140) !important;
+}
+
+
+/* fix for Firefox styling of Select Dropdown menus */
+select option { color: white; }
